--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dj-database-url = "^2.1.0"
 python-dotenv = "^1.0.1"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.27.1"
+django-bootstrap5 = "^23.4"
 
 
 [build-system]
