Add collected static to .gitignore,uncomment string with collectstatic command in build.sh, add LOGGING into settings.py and changes STORAGES. Solved the problem with static files.

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,7 @@ test.py
 
 # Bootstrap examples 
 bootstrap-5.3.3-examples/
+
+# All staticfiles collected by $ python3 manage.py collectstatic
+/static
+/staticfiles
