--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.1"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.27.1"
 django-bootstrap5 = "^23.4"
+django-filter = "^24.2"
 
 
 [build-system]
