--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.27.1"
 django-bootstrap5 = "^23.4"
 django-filter = "^24.2"
+rollbar = "^1.0.0"
 
 
 [build-system]
