--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = "^0.27.1"
 django-bootstrap5 = "^23.4"
 django-filter = "^24.2"
 rollbar = "^1.0.0"
+flake8 = "^7.0.0"
 
 
 [build-system]
