--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.27.1"
 django-bootstrap5 = "^23.4"
 django-filter = "^24.2"
-rollbar = "^1.0.0"
-flake8 = "^7.0.0"
+rollbar = "^0.16.3"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
