Remove *.mo pattern from .gitignore some languages changes in settings.py

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ coverage.xml
 cover/
 
 # Translations
-*.mo
+# *.mo
 *.pot
 
 # Django stuff:
@@ -128,7 +128,8 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project settings что он связан с задачами."
+
 .spyderproject
 .spyproject
 
