Add new workflow and coverage tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,4 +12,5 @@ exclude =
     */migrations/
 per-file-ignores =
     # line too long
-    task_manager/settings.py: E501
+    task_manager/settings.py: E501,
+    urls.py: E501
